[tool.poetry]
name = "gendiff"
version = "0.2.0"
description = "The second training project from Python developer course"
authors = ["ratushnyyvm <ratushnyyvm@gmail.com>"]
repository = "https://github.com/ratushnyyvm/gendiff"
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Education",
]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
PyYAML = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
